--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
           <!-- controls like share btn , new-quote btn -->
           <div class="controls">
-            <button id="quoteBtn">New Quote</button>
+            <div>
+              <button id="quoteBtn">New Quote</button>
+              <button id="download">Download</button>
+            </div>
             <div class="icon">
               <i id="clipboard-icon" class="ri-clipboard-line"></i>
 
@@ -39,5 +42,6 @@
     </div>
 
     <script src="./script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   </body>
 </html>
